--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="send_email">Send email</string>
     <string name="send">Send</string>
     <string name="title">Title</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
